--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "3aPSX5UOE1ey",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff70d597-8c93-43ca-b08e-c00b49677ffb"
+        "outputId": "13a4d6c6-24c9-4ed7-9c8e-6256b48e6017"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -53,22 +53,22 @@
     {
       "cell_type": "code",
       "source": [
-        "cd drive/My Drive/Titanic"
+        "cd /content/drive/MyDrive/ml/titanic"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ybqEQpseFsSL",
-        "outputId": "92a907fc-9dc4-47d5-cf01-39191cc023cf"
+        "outputId": "851e7dd5-7712-4cec-b64f-57c96e2d9600"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/drive/My Drive/Titanic\n"
+            "/content/drive/MyDrive/ml/titanic\n"
           ]
         }
       ]
@@ -83,15 +83,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ehT3Ld6F5k5",
-        "outputId": "7e43b676-6ca5-46fe-a088-590195cf1f5c"
+        "outputId": "1c33e3b2-00d6-493f-f732-0869d102cd47"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "test.csv  test.gsheet  train.csv  train.gsheet\n"
+            "\u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
           ]
         }
       ]
