initial imports and mount the drive

--- a/potato_disease.ipynb
+++ b/potato_disease.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNX/hybxNGV8KxC+9/bdt0L",
+      "authorship_tag": "ABX9TyNMt/xbX0TDYJI8BmuyA9ZE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,17 +23,63 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/omer358/ml-acamey/blob/master/Untitled8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/omer358/ml-acamey/blob/master/potato_disease.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Import the required libraries"
+      ],
+      "metadata": {
+        "id": "ISp5sh7FzXMA"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "vyftX5sFwf1T"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import models, layers\n",
+        "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conect the drive to load the dataset."
+      ],
+      "metadata": {
+        "id": "27dgR7FDzPRj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "TRx2SOqrzK7v",
+        "outputId": "2c2883dc-11c8-4b72-b6f0-bcd6b33b994d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     }
   ]
 }
